footer changes done :)

--- a/vision.html
+++ b/vision.html
@@ -242,7 +242,15 @@
               <a href="index.html#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
-          </ul>  
+          </ul>
+		 <h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
+
+            <!--<script type="text/javascript" src="//counter.websiteout.net/js/5/9/1000/0"></script> -->
+            <div style="pointer-events: none;">
+                <div id="sfcbzyb65646deq6z13n5r1u5aygd2b1bnf"></div>
+                <script type="text/javascript" src="https://counter8.stat.ovh/private/counter.js?c=bzyb65646deq6z13n5r1u5aygd2b1bnf&down=async" async></script>
+                <noscript><a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter8.stat.ovh/private/freecounterstat.php?c=bzyb65646deq6z13n5r1u5aygd2b1bnf" border="0" title="free hit counter" alt="free hit counter"></a></noscript>
+        </div>
         </div>
       </div>
     </div>
