csr page  and publications name change it

--- a/media-details.html
+++ b/media-details.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Publications | Soul of Braj Federation</title>
+  <title>Media Details | Soul of Braj Federation</title>
 
   
   <!-- mobile responsive meta -->
@@ -20,6 +20,9 @@
   <link href="css/style.css" rel="stylesheet">
   
   <!--Favicon-->
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 
 
@@ -99,14 +102,12 @@
                         <li>
                               <a href="team.html">Team</a>
                         </li>
-                        <li>
-                              <a href="csr-news.html">CSR News</a>
-                        </li>
+
                         <li>
                               <a href="#">Success Stories</a>
                         </li>
 					    <li  class="active">
-                              <a href="publications.html">Publications</a>
+                              <a href="media.html">Media</a>
                         </li>
                        <li>
                               <a href="contact.html">Contact</a>
@@ -120,20 +121,19 @@
 <section class="page-title text-center" style="background-image:url(images/header_bg.jpg);">
     <div class="container">
         <div class="title-text">
-            <h1>Publications</h1>
+            <h1>Media Details</h1>
             <ul class="title-menu clearfix">
                 <li>
                     <a href="index.html">home &nbsp;/</a>
                 </li>
-                <li>Publications</li>
+                <li>Media Details</li>
             </ul>
         </div>
     </div>
 </section>
 
-
 <!-- Contact Section -->
-<section class="blog-section style-four section">
+<section class="blog-section section style-four style-five">
     <div class="container">
         <div class="row">
             <div class="col-md-9 col-sm-12 col-xs-12">
@@ -141,69 +141,94 @@
                     <div class="item-holder">
                         <div class="image-box">
                             <figure>
-                                <a href="publications-details.html"><img src="images/5.jpg" alt=""></a>
+                                <a href="single-blog.html"><img src="images/5.jpg" alt=""></a>
                             </figure>
                         </div>
                         <div class="content-text">
-                            <a href="publications-details.html"><h6>Publications Heading</h6></a>
+                            <a href="single-blog.html"><h5>Full Title of Publications</h5></a>
                             <span>By Soul of Braj Federation / 02 January 2018</span>
-                            <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Sed porttitor lectus nibh. Curabitur aliquet quam
-                            id dui posuere blandit. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
-                            <div class="link-btn">
-                                <a href="publications-details.html" class="btn-style-one">read more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-holder">
-                        <div class="image-box">
-                            <figure>
-                                <a href="publications-details.html"><img src="images/6.jpg" alt=""></a>
-                            </figure>
-                        </div>
-                        <div class="content-text">
-                            <a href="publications-details.html"><h6>Publications Heading</h6></a>
-                            <span>By Soul of Braj Federation / 08 January 2018</span>
-                            <p>Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada. Nulla porttitor accumsan
-                            tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.</p>
-                            <div class="link-btn">
-                                <a href="publications-details.html" class="btn-style-one">read more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-holder">
-                        <div class="image-box">
-                            <figure>
-                                <a href="publications-details.html"><img src="images/7.jpg" alt=""></a>
-                            </figure>
-                        </div>
-                        <div class="content-text">
-                            <a href="publications-details.html"><h6>Publications Heading</h6></a>
-                            <span>By Soul of Braj Federation / 12 January 2018</span>
-                            <p>Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Quisque velit nisi, pretium
-                            ut lacinia in, elementum id enim. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
-                            <div class="link-btn">
-                                <a href="publications-details.html" class="btn-style-one">read more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item-holder">
-                        <div class="image-box">
-                            <figure>
-                                <a href="publications-details.html"><img src="images/8.jpg" alt=""></a>
-                            </figure>
-                        </div>
-                        <div class="content-text">
-                            <a href="publications-details.html"><h6>Publications Heading</h6></a>
-                            <span>By Soul of Braj Federation / 25 January 2018</span>
-                            <p>Proin eget tortor risus. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis
-                            a pellentesque nec, egestas non nisi. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
-                            <div class="link-btn">
-                                <a href="publications-details.html" class="btn-style-one">read more</a>
-                            </div>
+                            <p>Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magniol res eos qui rate voluptatem sequi nesciunt Neque porro quisquam est qui dolorem ipsum quia dolore sit amet conlites sectetur adipisci quia suthagara lukuthea satham non numquam eius modi tempra. incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam. <br>
+                            Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magniol res eos qui rate voluptatem sequi nesciunt Neque porro quisquam est qui dolorem ipsum quia dolore sit amet conlites sectetur adipisci quia suthagara lukuthea satham non numquam eius modi tempra. incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.</p>
+                            <div class="text">
+                                <p>
+                                    Incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosamincidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam.
+                                </p>
+                            </div>                            
                         </div>
                     </div>
                 </div>
-            </div>
+               <!--<div class="comments-area">
+                    <div class="sec-title">
+                        <h6>Comments (3)</h6>
+                    </div>
+                    <div class="comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/1.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Jacky Chan<span>April 06, 2018</span></h6>
+                            <a href="#"><h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5></a>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam sequi praesentium, veritatis nulla quam at exercitationem? Nesciunt molestiae neque modi.</p>
+                        </div>                                            
+                    </div>                            
+                    <div class="comment reply-comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/2.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Robben Oti<span>April 07, 2018</span></h6>
+                            <a href="#"><h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5></a>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, a! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, obcaecati!</p>
+                        </div>                                    
+                    </div>                            
+                    <div class="comment">
+                        <div class="image-holder">
+                            <figure>
+                                <img src="images/blog/3.png" alt="">
+                            </figure>
+                        </div>
+                        <div class="image-text">
+                            <h6>Chang Lingma<span>May 12, 2018</span></h6>
+                            <h5><i class="fa fa-reply-all" aria-hidden="true"></i>Comment Back</h5>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae possimus suscipit esse quia sapiente obcaecati consequuntur dolor sequi adipisci unde!</p>
+                        </div>                                    
+                    </div>                    
+                </div>-->
+                <!--<div class="form-area">
+                    <div class="sec-title">
+                        <h6>Leave A Comment</h6>
+                    </div>
+                    <form id="contact_form" name="contact_form" class="default-form">
+                        <div class="row clearfix">
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group">
+                                    <textarea name="form_message" class="form-control textarea required" placeholder="Your Review"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    <input type="text" name="form_name" class="form-control" value="" placeholder="Your Name" required="">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class="form-group">
+                                    <input type="email" name="form_email" class="form-control required email" value="" placeholder="Your Email" required="">
+                                </div>
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div class="form-group form-bottom">
+                                    <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
+                                    <button class="btn-style-one" type="submit" data-loading-text="Please wait...">Comment</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>-->
+</div>
             <div class="col-md-3 col-sm-12 col-xs-12">
                 <div class="right-side">
                     <div class="categorise-menu">
@@ -228,15 +253,6 @@
                 </div>
             </div>
         </div>                
-        <div class="styled-pagination">
-            <ul>
-                <li><a class="prev" href="#"><span class="fa fa-angle-left" aria-hidden="true"></span></a></li>
-                <li><a href="#" class="active">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a class="next" href="#"><span class="fa fa-angle-right" aria-hidden="true"></span></a></li>
-            </ul>
-        </div>                  
     </div>
 </section>
 <!-- End Contact Section -->
@@ -310,7 +326,7 @@
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
           </ul>
-			<h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
+			 <h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
 
             <!--<script type="text/javascript" src="//counter.websiteout.net/js/5/9/1000/0"></script> -->
             <div style="pointer-events: none;">
