--- a/team.html
+++ b/team.html
@@ -101,14 +101,12 @@
 						<li class="active">
 							<a href="team.html">Team</a>
 						</li>
-						<li>
-							<a href="csr-news.html">CSR News</a>
-						</li>
+						
 						<li>
 							<a href="#">Success Stories</a>
 						</li>
 						<li>
-							<a href="publications.html">Publications</a>
+							<a href="media.html">Media</a>
 						</li>
 						<li>
 							<a href="contact.html">Contact</a>
