--- a/csr-news.html
+++ b/csr-news.html
@@ -109,7 +109,7 @@
                               <a href="#">Success Stories</a>
                         </li>
 					  <li>
-					  		  <a href="publications.html">Publications</a>
+					  		  <a href="media.html">Media</a>
 					  </li>
                         <li>
                               <a href="contact.html">Contact</a>
