--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						<h3 style="font-weight: 900; font-size: 40px;">ABOUT US</h3>
                         <div class="col-sm-12 col-md-6">
 						<p>The soul of braj is an NGO, it comes under section 8 (NPO) headquarter in Vrindavan (Mathura). It is born with the pure intention to serve all brijwasi’s as Written in Shrimad Bhagavatam “My beloved Krishna, I want to become a servant of your servant” Soul of braj has been focusing and trying to make a positive impact on the living standards of the economically poor and disadvantaged people of braj by helping them to provide basic health care facilities and sanitation. We are continuously leveraging basic facilities like Clean water to drinks and hygiene food to multiply our reach and also preserving old heritage. <br>
-                        Our collaboration with India CSR Network and Indian Bureaucracy, along with the persistent support from prestigious corporates, individual donors, and well-wishers have helped us to grow and serve braj from all over the world. </p>
+                        Our collaboration with Indian Bureaucracy, along with the persistent support from prestigious corporates, individual donors, and well-wishers have helped us to grow and serve braj from all over the world. </p>
                             
 					</div>
                     <!--About us video-->    
