--- a/csr-news.html
+++ b/csr-news.html
@@ -44,6 +44,16 @@
                   </figure>
             </div>
             <div class="right-side">
+				<div class="inner-box text-center">
+                    <div class="image-box">
+                        <figure>
+                            <img src="images/braj_license.jpeg" alt="" width="600" height="70" class="img-responsive">
+                        </figure>
+                    </div>
+				</div>
+                <br>
+           
+                <br> 
                   <ul class="contact-info">
                         <li class="item">
                               <div class="icon-box">
