media page updated

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
       </section>
       <!--End code-->
       
-      <!--CSR news code-->
+      <!--CSR news code
       <style>
           .uw-showbranding .uw-w-branding{
               display: none;
