few changes done

--- a/media.html
+++ b/media.html
@@ -455,10 +455,10 @@
                             <h6>Categories</h6>
                         </div>
                         <ul class="categorise-list">
-                            <li><a href="#" onclick="filterSelection('photos')">photos <span>(12)</span></a></li>
-                            <li><a href="#" onclick="filterSelection('videos')">videos <span>(22)</span></a></li>
-                            <li><a href="#" onclick="filterSelection('pdf')">pdf <span>(18)</span></a></li>
-                            <li><a href="#" onclick="filterSelection('links')">links<span>(32)</span></a></li>
+                            <li><a href="#" onclick="filterSelection('photos')">photos <span></span></a></li>
+                            <li><a href="#" onclick="filterSelection('videos')">videos <span></span></a></li>
+                            <li><a href="#" onclick="filterSelection('pdf')">pdf <span></span></a></li>
+                            <li><a href="#" onclick="filterSelection('links')">links<span></span></a></li>
                         </ul>                           
                     </div>
                     <!--<div class="tag-list">
