two pages added and some changes done :)

--- a/Partners.html
+++ b/Partners.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Hari Krishna | Soul of Braj Federation</title>
+	<title>Partners | Soul of Braj Federation</title>
 
 
 	<!-- mobile responsive meta -->
@@ -18,8 +18,6 @@
 
 	<!-- Stylesheets -->
 	<link href="css/style.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -42,16 +40,6 @@
 					</figure>
 				</div>
 				<div class="right-side">
-					<div class="inner-box text-center">
-                    <div class="image-box">
-                        <figure>
-                            <img src="images/braj_license.jpeg" alt="" width="600" height="70" class="img-responsive">
-                        </figure>
-                    </div>
-				</div>
-                <br>
-           
-                <br> 
 					<ul class="contact-info">
 						<li class="item">
 							<div class="icon-box">
@@ -110,7 +98,7 @@
 						<li>
 							<a href="gallery.html">Gallery</a>
 						</li>
-						<li class="active">
+						<li >
 							<a href="team.html">Team</a>
 						</li>
 						
@@ -120,7 +108,7 @@
 						<li>
 							<a href="media.html">Media</a>
 						</li>
-                        <li>
+                        <li class="active">
 							<a href="Partners.html">Partners</a>
 						</li>
 						<li>
@@ -132,45 +120,43 @@
 		</nav>
 		<!--End Main Header -->
 
-		<section class="story">
+		<section class="page-title text-center" style="background-image:url(images/header_bg.jpg);">
 			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="team-member" style="width: 300px; height: 500; ">
-							<img src="images/hari%20krishna.jpg" class="responsive" alt="story">
-						</div>
-					</div>
-					<div class="col-md-6  ">
-						<div class="story-content">
-							<h2 style="font-weight: 900; font-size: 30px;">Dr. Hari Krishna <br>
-								<span style="font-weight: 400; font-size: 20px;"> the Digital Brand Ambassador &amp; Chairman Vision Digital India. </span>
-							</h2>
-						</div>
-					</div>
+				<div class="title-text">
+					<h1>Partners</h1>
+					<ul class="title-menu clearfix">
+						<li>
+							<a href="index.html">home &nbsp;/</a>
+						</li>
+						<li>Partners </li>
+					</ul>
 				</div>
 			</div>
 		</section>
 
-
-		<section class="feature-section" style="padding-bottom: 30px;">
+		<!--End Page Title-->
+		<section class="team-section section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="story-content">
-							<p style="font-weight: 400; font-size: 18px; color: black">Dr. Hari Krishna Maram is the Digital Brand Ambassador &amp; Chairman Vision Digital India. His work in the field of management and management education spans over 24 years. Dr. Maram served as the Governing Council Member at AIMA (All India Management Association). He was also the Vice President at AIMS (Association of Indian Management Schools). Additionally, he was Hon. Secretary - BMA (Bangalore Management Association), Treasurer - Education Promotion Society for India (EPSI) South India, Executive Board Member at NIPM. Chairperson Higher Education Forum –Karnataka. His efforts in management education have been recognized on numerous occasions by the Government of India. He is part of UGC Committee. Dr. Marm is Advisory Board Member in leading organizations.<br>
-								In the field of management, Dr. Maram has published a wide variety and large number of books, research papers, and travelled extensively to over 40 countries to get a global perspective on management. Apart from co-authoring a number of text books, he has presented papers on management in over 15 countries. Also, he is a research guide of leading universities in India and a faculty at leading international universities. Besides being an excellent academician and educationist, Dr. Maram is involved with a large number of CSR activities. Additionally, he is the chief mentor of the great initiative bangalore green which aims at environmental conservation in bangalore.</p>
-							<br>
-
-							<a href="team.html" class="btn btn-style-one">back</a>
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<div class="team-member" style="width: 275px; ">
+                                <a href="https://livelovelife.in/" target="_blank">
+								<img src="images/partners_1.jpeg" alt="Live Love Life" class="img-responsive">
+								</a>
+							</div>
 
 						</div>
+						<!--End single tab content-->
 					</div>
 				</div>
 			</div>
+
 		</section>
+		<!--End Page Title-->
 
-
-		<!--footer-main-->
+		
+<!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
     <div class="container">
@@ -269,11 +255,8 @@
 </footer>
 <!--End footer-main-->
 
+
 	</div>
-
-
-
-
 	<!--End pagewrapper-->
 
 
@@ -289,14 +272,8 @@
 	<script src="plugins/slick/slick.min.js"></script>
 	<!-- FancyBox -->
 	<script src="plugins/fancybox/jquery.fancybox.min.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
-	<script src="plugins/google-map/gmap.js"></script>
 
-	<script src="plugins/validate.js"></script>
-	<script src="plugins/wow.js"></script>
 	<script src="plugins/jquery-ui.js"></script>
-	<script src="plugins/timePicker.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
