--- a/csr-news.html
+++ b/csr-news.html
@@ -122,6 +122,9 @@
 					  		  <a href="media.html">Media</a>
 					  </li>
                         <li>
+							<a href="Partners.html">Partners</a>
+						</li>
+                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
                         
