--- a/donate.html
+++ b/donate.html
@@ -67,7 +67,7 @@
                               </div>
                               <strong>Email</strong>
                               <br>
-                              <a href="#">
+                              <a href="mailto:soulofbraj@gmail.com">
                                     <span style="font-weight: 600;">soulofbraj@gmail.com</span>
                               </a>
                         </li>
@@ -119,12 +119,15 @@
                               <a href="team.html">Team</a>
                         </li>
                         
-                        <li>
+                        <!--<li>
                               <a href="#">Success Stories</a>
-                        </li>
+                        </li>-->
 					    <li>
                               <a href="media.html">Media</a>
                         </li>
+                        <li>
+							<a href="Partners.html">Partners</a>
+						</li>
                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
