--- a/success_stories.html
+++ b/success_stories.html
@@ -107,6 +107,9 @@
                        <li class="active">
                               <a href="success_stories.html">Success Stories</a>
                         </li>
+                        <li>
+							<a href="Partners.html">Partners</a>
+						</li>
                        <li>
                               <a href="contact.html">Contact</a>
                         </li>
