csr news and one team member added

--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,9 @@
                         <li>
                               <a href="team.html">Team</a>
                         </li>
-
+					  	<li>
+							<a href="csr-news.html">CSR News</a>
+					  	</li>
                        <!--<li>
                               <a href="#">Success Stories</a>
                         </li>-->
