--- a/index.html
+++ b/index.html
@@ -160,10 +160,13 @@
                         <li>
                               <a href="team.html">Team</a>
                         </li>
+					    <li>
+							<a href="csr-news.html">CSR News</a>
+					  	</li>
 
-                        <li>
+                        <!--<li>
                               <a href="#">Success Stories</a>
-                        </li>
+                        </li>-->
 					    <li>
                               <a href="media.html">Media</a>
                         </li>
@@ -626,7 +629,7 @@
 </section>
 <!--End Service Section-->
 
-<!--team section-->
+<!--team section--
 <section class="team-section section">
     <div class="container">
         <div class="section-title text-center">
