--- a/veshakha-gulati.html
+++ b/veshakha-gulati.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<title>Partners | Soul of Braj Federation</title>
+	<title>Veshakha Gulati | Soul of Braj Federation</title>
 
 
 	<!-- mobile responsive meta -->
@@ -18,6 +18,8 @@
 
 	<!-- Stylesheets -->
 	<link href="css/style.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -40,6 +42,16 @@
 					</figure>
 				</div>
 				<div class="right-side">
+					<div class="inner-box text-center">
+                    <div class="image-box">
+                        <figure>
+                            <img src="images/braj_license.jpeg" alt="" width="600" height="70" class="img-responsive">
+                        </figure>
+                    </div>
+				</div>
+                <br>
+           
+                <br> 
 					<ul class="contact-info">
 						<li class="item">
 							<div class="icon-box">
@@ -98,7 +110,7 @@
 						<li>
 							<a href="gallery.html">Gallery</a>
 						</li>
-						<li >
+						<li class="active">
 							<a href="team.html">Team</a>
 						</li>
 						<li>
@@ -110,7 +122,7 @@
 						<li>
 							<a href="media.html">Media</a>
 						</li>
-                        <li class="active">
+                        <li>
 							<a href="Partners.html">Partners</a>
 						</li>
 						<li>
@@ -122,43 +134,61 @@
 		</nav>
 		<!--End Main Header -->
 
-		<section class="page-title text-center" style="background-image:url(images/header_bg.jpg);">
-			<div class="container">
-				<div class="title-text">
-					<h1>Partners</h1>
-					<ul class="title-menu clearfix">
-						<li>
-							<a href="index.html">home &nbsp;/</a>
-						</li>
-						<li>Partners </li>
-					</ul>
-				</div>
-			</div>
-		</section>
-
-		<!--End Page Title-->
-		<section class="team-section section">
+		<section class="story">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="col-md-4 col-sm-6 col-xs-12">
-							<div class="team-member" style="width: 275px; ">
-                                <a href="https://livelovelife.in/" target="_blank">
-								<img src="images/partners_1.jpeg" alt="Live Love Life" class="img-responsive">
-								</a>
-							</div>
-
+					<div class="col-md-4">
+						<div class="team-member" style="width: 300px; height: 500; ">
+							<img src="images/Veshakha%20Gulati.jpg" class="responsive" alt="story">
 						</div>
-						<!--End single tab content-->
+					</div>
+					<div class="col-md-6  ">
+						<div class="story-content">
+							<h2 style="font-weight: 900; font-size: 30px;">Veshakha Gulati<br>
+								<span style="font-weight: 400; font-size: 20px;">Founder at Live Love Life Foundation</span>
+							</h2>
+						</div>
 					</div>
 				</div>
 			</div>
-
 		</section>
-		<!--End Page Title-->
 
-		
-<!--footer-main-->
+
+		<section class="feature-section" style="padding-bottom: 30px;">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="story-content">
+							<p style="font-weight: 400; font-size: 18px; color: black; text-align: justify;"> A lead HR, an evolved Life-Coach and a skilled trainer with a 25 years track record of guiding HR Program Management &amp; Employee Development for leading global firms across EU, USA, Gulf MEA and Asia Pacific
+
+							An evolved modern day yogini with meditative experience, a certified NLP programmer, an experienced life-coach, I deploy six sigma approach &amp; training skills to launch process driven departments. I am successfully rendering life-coaching, HR &amp; PR to government bodies, NGOs and corporate clients in my current role.
+
+							Apparently, I coached 25 C-Level executives as GM - HR &amp; Admin at Indian Express.
+
+							An adventure enthusiast, have completed 25 beautiful treks
+
+							A highly skilled orator, I have been a panellist of various debates and programmes across colleges, media programmes and wellness &amp; health related initiatives.
+
+							A distinguished sports enthusiast, I have run 100+ marathons and have a thrill to learn and perform highly competitive sporting activities like Devils Circuit, an obstacle race.
+
+							Highly creative person, I am skilled in Dastangoi, art of story-telling and an amateur poetess.
+
+							Also a fond musician with technology up on my sleeve, I play Djembe and Durbuka with Djembe Fola and other drumming circles across Delhi (NCR) while practicing sitar and dancing as well.
+
+							Having a multi-faceted personality, with exceptional communication and writing skills, I have been a lead lecturer to Amity, Symbiosis, Galgotia &amp; Chit Kara University while also writing my blogs on current affairs, politics and management.
+							</p>
+							<br>
+
+							<a href="team.html" class="btn btn-style-one">back</a>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		<!--footer-main-->
 <footer class="footer-main">
   <div class="footer-top">
     <div class="container">
@@ -257,8 +287,11 @@
 </footer>
 <!--End footer-main-->
 
-
 	</div>
+
+
+
+
 	<!--End pagewrapper-->
 
 
@@ -274,8 +307,14 @@
 	<script src="plugins/slick/slick.min.js"></script>
 	<!-- FancyBox -->
 	<script src="plugins/fancybox/jquery.fancybox.min.js"></script>
+	<!-- Google Map -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"></script>
+	<script src="plugins/google-map/gmap.js"></script>
 
+	<script src="plugins/validate.js"></script>
+	<script src="plugins/wow.js"></script>
 	<script src="plugins/jquery-ui.js"></script>
+	<script src="plugins/timePicker.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
