--- a/aditya-rao.html
+++ b/aditya-rao.html
@@ -114,7 +114,9 @@
                         <li class="active">
                               <a href="team.html">Team</a>
                         </li>
-
+					    <li>
+							<a href="csr-news.html">CSR News</a>
+					  	</li>
                         <!--<li>
                               <a href="#">Success Stories</a>
                         </li>-->
