refund policy page now be added :)

--- a/aditya-rao.html
+++ b/aditya-rao.html
@@ -245,16 +245,20 @@
 		  
 		   <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-2">
 			   <h6></h6><br>
-          <ul class="menu-link">
+			 <ul class="menu-link">
              <li>
-              <a href="terms-and-conditions.html" target="_blank">
+              <a href="terms-and-conditions.html" target="_blank" style="color: #4FC3F7;">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Terms &amp; Conditions</a>
             </li>  
             <li>
-              <a href="privacy-policy.html" target="_blank">
+              <a href="privacy-policy.html" target="_blank" style="color: #4FC3F7;">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Privacy Policy</a>
             </li>
-          </ul> 
+			<li>
+              <a href="refund-policy.html" target="_blank" style="color: #4FC3F7;">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>Refund Policy</a>
+            </li>
+             </ul>
 			   
 			   <h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
 
