--- a/csr-news.html
+++ b/csr-news.html
@@ -61,7 +61,7 @@
                               </div>
                               <strong>Email</strong>
                               <br>
-                              <a href="#">
+                              <a href="mailto:soulofbraj@gmail.com">
                                     <span style="font-weight: 600;">soulofbraj@gmail.com</span>
                               </a>
                         </li>
@@ -216,31 +216,54 @@
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-4">
+        <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-1">
           <h6>Services</h6>
           <ul class="menu-link">
+             <li>
+              <a href="#activites">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Sanitary Pads</a>
+            </li>  
             <li>
-              <a href="index.html#activites">
+              <a href="#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Food distribution for needful </a>
             </li>
             <li>
-              <a href="index.html#activites">
+              <a href="#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic education for all children </a>
             </li>
             <li>
-              <a href="index.html#activites">
+              <a href="#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Basic health care facilities for brajwasi </a>
             </li>
             <li>
-              <a href="index.html#activites">
+              <a href="#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Community Service </a>
             </li>
             <li>
-              <a href="index.html#activites">
+              <a href="#activites">
                 <i class="fa fa-angle-right" aria-hidden="true"></i>Water and Sanitation and Rural Development</a>
             </li>
-          </ul>
-			<h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
+          </ul>  
+        </div>
+		  
+		   <div class="col-md-4 col-sm-6 col-xs-12 col-md-push-2">
+			   <h6></h6><br>
+          <ul class="menu-link">
+             <li>
+              <a href="terms-and-conditions.html" target="_blank" style="color: #4FC3F7;">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Terms &amp; Conditions</a>
+            </li>  
+            <li>
+              <a href="privacy-policy.html" target="_blank" style="color: #4FC3F7;">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>Privacy Policy</a>
+            </li>
+			<li>
+              <a href="refund-policy.html" target="_blank" style="color: #4FC3F7;">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>Refund Policy</a>
+            </li>
+          </ul> 
+			   
+			   <h6 style="padding-bottom: -35px; pointer-events: none;">Visitors</h6>
 
             <!--<script type="text/javascript" src="//counter.websiteout.net/js/5/9/1000/0"></script> -->
             <div style="pointer-events: none;">
